fix dark mode inputs

--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -226,11 +226,12 @@ ol li::marker {
 }
 
 .dark {
-    filter: invert(100%);
     background-color: #333;
     border-color: #fff;
+    color: #fff;
 }
 
-.dark img {
-    filter: invert(100%);
+.dark input,
+.dark select {
+    background-color: #eee;
 }
